Design added (vertical nav)

--- a/10-ton-electric-truck.html
+++ b/10-ton-electric-truck.html
@@ -41,8 +41,16 @@
     </header>
 
     <main>
+        <nav>
+            <ul>
+                <li><a href="#section1"><span class="circle"></span></a></li>
+                <li><a href="#section2"><span class="circle"></span></a></li>
+                <li><a href="#section3"><span class="circle"></span></a></li>
+            </ul>
+        </nav>
+
         <!-- First section start - AK -->
-        <section class="hero3">
+        <section id="section1" class="hero3 content-section">
             <div class="hero3-content">
                 <div class="hero3-text">
                     <h1>SPECIFICATION</h1>
@@ -57,7 +65,7 @@
         <!-- First section end - AK -->
 
         <!-- Second section start - AK -->
-        <section class="hero2">
+        <section id="section2" class="hero2 content-section">
             <div class="hero2-content">
                 <img class="tev-logo" src="assets/images/background/truck8.png" alt="Truck Image">
                 <div class="hero2-text">
@@ -71,7 +79,7 @@
         <!-- Second section end - AK -->
 
         <!-- Third section start - AK -->
-        <section class="hero3">
+        <section id="section3" class="hero3 content-section">
             <div class="hero3-content">
                 <div class="hero3-text">
                     <h1>KEY FEATURES</h1>
@@ -98,7 +106,7 @@
 
     </main>
 
-
+    <script src="assets/script.js"></script>
     <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
