--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <title>Electric Vehicles</title>
 
     <link rel="icon" type="image/x-icon" href="assets/images/logo-home.png">
     <link rel="stylesheet" href="assets/styles.css">
@@ -18,8 +18,7 @@
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <img class="bi me-2" width="auto" height="40" role="img" src="assets/images/logo-home.png"
-                        alt="logo">
+                    <img class="bi me-2" role="img" src="assets/images/logo-home.png" alt="logo">
                 </a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="10-ton-electric-truck.html" class="nav-link px-2 text-white">10 TON ELECTRIC TRUCK</a>
@@ -42,18 +41,26 @@
 
     <main>
 
+        <nav>
+            <ul>
+                <li><a href="#section1"><span class="circle"></span></a></li>
+                <li><a href="#section2"><span class="circle"></span></a></li>
+                <li><a href="#section3"><span class="circle"></span></a></li>
+            </ul>
+        </nav>
+
         <!-- First section start - AK -->
-        <section class="hero">
+        <section id="section1" class="hero content-section ">
             <div class="hero-content">
-                <img class="tev-logo-home" src="assets/images/background/truck1.png" alt="TEV Logo"><br>
-                <img class="bi" width="auto" height="100" role="img" src="assets/images/logo-home.png" alt="logo">
+                <img class="tev-logo-home" src="assets/images/background/truck1-bg.png" alt="TEV Logo"><br>
+                <img class="bi-1" role="img" src="assets/images/logo-home.png" alt="logo">
                 <h1>DEFINING A <span>NEW CLASS</span> OF <span>ELECTRIC VEHICLES</span></h1>
             </div>
         </section>
         <!-- First section end - AK -->
 
         <!-- Second section start - AK -->
-        <section class="hero2">
+        <section id="section2" class="hero2 content-section">
             <div class="hero2-content">
                 <img class="tev-logo" src="assets/images/background/truck9.png" alt="Truck Image">
                 <div class="hero2-text">
@@ -71,7 +78,7 @@
         <!-- Second section end - AK -->
 
         <!-- Third section start - AK -->
-        <section class="hero3">
+        <section id="section3" class="hero3 content-section">
             <div class="hero3-content">
                 <div class="hero3-text">
                     <h1>More details about our Company</h1>
@@ -102,6 +109,7 @@
     </main>
 
 
+    <script src="assets/script.js"></script>
     <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
