--- a/hydrogen-combustion-engine.html
+++ b/hydrogen-combustion-engine.html
@@ -41,8 +41,15 @@
     </header>
 
     <main>
+        <nav>
+            <ul>
+                <li><a href="#section1"><span class="circle"></span></a></li>
+                <li><a href="#section2"><span class="circle"></span></a></li>
+            </ul>
+        </nav>
+
         <!-- First section start - AK -->
-        <section class="hero3">
+        <section id="section1" class="hero3 content-section">
             <div class="hero3-content">
                 <div class="hero3-text">
                     <h1>Variants</h1>
@@ -53,8 +60,8 @@
         </section>
         <!-- First section end - AK -->
 
-        <!-- Third section start - AK -->
-        <section class="hero3">
+        <!-- Second section start - AK -->
+        <section id="section2" class="hero3 content-section">
             <div class="hero3-content">
                 <div class="hero3-text">
                     <h1>KEY FEATURES</h1>
@@ -69,7 +76,7 @@
                 <img class="tev-logo" src="assets/images/background/hc-engine3.png" alt="Truck Image">
             </div>
         </section>
-        <!-- Third section end - AK -->
+        <!-- Second section end - AK -->
 
 
 
@@ -81,7 +88,7 @@
 
     </main>
 
-
+    <script src="assets/script.js"></script>
     <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
