--- a/index.html
+++ b/index.html
@@ -41,8 +41,16 @@
 
     <main>
 
+        <nav>
+            <ul>
+                <li><a href="#section1"><span class="circle"></span></a></li>
+                <li><a href="#section2"><span class="circle"></span></a></li>
+                <li><a href="#section3"><span class="circle"></span></a></li>
+            </ul>
+        </nav>
+
         <!-- First section start - AK -->
-        <section class="hero">
+        <section id="section1" class="hero content-section">
             <div class="hero-content">
                 <img class="tev-logo-home" src="assets/images/background/truck1-bg.png" alt="TEV Logo"><br>
                 <img class="bi-1" role="img" src="assets/images/logo-home.png" alt="logo">
@@ -52,7 +60,7 @@
         <!-- First section end - AK -->
 
         <!-- Second section start - AK -->
-        <section class="hero2">
+        <section id="section2" class="hero2 content-section">
             <div class="hero2-content">
                 <img class="tev-logo" src="assets/images/background/truck9.png" alt="Truck Image">
                 <div class="hero2-text">
@@ -70,7 +78,7 @@
         <!-- Second section end - AK -->
 
         <!-- Third section start - AK -->
-        <section class="hero3">
+        <section id="section3" class="hero3 content-section">
             <div class="hero3-content">
                 <div class="hero3-text">
                     <h1>More details about our Company</h1>
@@ -101,6 +109,7 @@
     </main>
 
 
+    <script src="assets/script.js"></script>
     <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
